--- a/index.html
+++ b/index.html
@@ -12,7 +12,92 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+     <ul>
+       <li>The head element contains information about the webpage.</li>
+       <li>The body element represents the visible content shown to the user.</li>
+     </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+     <ul>
+       <li>Enter your CSS notes here</li>
+     </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <h3>SETUP</h3>
+          <h4>Configuring user information used across all local repositories</h4>
+            <li>git config --global user.name “[firstname lastname]”: set a name that is identifiable for credit when review version history</li>
+            <li>git config --global user.email “[valid-email]”: set an email address that will be associated with each history marker</li>
+            <li>git config --global color.ui auto: set automatic command line coloring for Git for easy reviewing</li>
+            <h3>SETUP & INIT</h3>
+            <h4>Configuring user information, initializing and cloning repositories</h4>
+            <li>git init: initialize an existing directory as a Git repository</li>
+            <li>git clone [url]: retrieve an entire repository from a hosted location via URL</li>
+
+            <h3>STAGE & SNAPSHOT</h3>
+            <h4>Working with snapshots and the Git staging area</h4>
+            <li>git status: show modified files in working directory, staged for your next commit</li>
+            <li>git add [file]: add a file as it looks now to your next commit (stage)</li>
+            <li>git reset [file]: unstage a file while retaining the changes in working directory</li>
+            <li>git diff: diff of what is changed but not staged</li>
+            <li>git diff --staged: diff of what is staged but not yet commited</li>
+            <li>git commit -m “[descriptive message]”: commit your staged content as a new commit snapshot</li> 
+            <h3>BRANCH & MERGE</h3>
+            <h4>Isolating work in branches, changing context, and integrating changes</h4>
+            <li>git branch: list your branches. a * will appear next to the currently active branch</li>
+            <li>git branch [branch-name]: create a new branch at the current commit</li>
+            <li>git checkout: switch to another branch and check it out into your working directory</li>
+            <li>git merge [branch]: merge the specified branch’s history into the current one</li>
+            <li>git log: show all commits in the current branch’s history</li>
+            <h3>INSPECT & COMPARE</h3>
+            <h4>Examining logs, diffs and object information</h4>
+            <li>git log: show the commit history for the currently active branch</li>
+            <li>git log branchB..branchA: show the commits on branchA that are not on branchB</li>
+            <li>git log --follow [file]: show the commits that changed file, even across renames</li>
+            <li>git diff branchB...branchA: show the diff of what is in branchA that is not in branchB</li>
+            <li>git show [SHA]: show any object in Git in human-readable format</li>
+            <h3>TRACKING PATH CHANGES</h3>
+            <h4>Versioning file removes and path changes</h4>
+            <li>git rm [file]: delete the file from project and stage the removal for commit</li>
+            <li>git mv [existing-path] [new-path]: change an existing file path and stage the move</li>
+            <li>git log --stat -M: show all commit logs with indication of any paths that moved</li>
+            <h3>IGNORING PATTERNS</h3>
+            <h4>Preventing unintentional staging or commiting of files</h4>
+            <li>git config --global core.excludesfile [file]: system wide ignore patern for all local repositories</li>
+            <h3>SHARE & UPDATE</h3>
+            <h4>Retrieving updates from another repository and updating local repos</h4>
+            <li>git remote add [alias] [url]: add a git URL as an alias</li>
+            <li>git fetch [alias]: fetch down all the branches from that Git remote</li>
+            <li>git merge [alias]/[branch]: merge a remote branch into your current branch to bring it up to date</li>
+            <li>git push [alias] [branch]: Transmit local branch commits to the remote repository branch</li>
+            <li>git pull: fetch and merge any commits from the tracking remote branch</li>
+            <h3>REWRITE HISTORY</h3>
+            <h4>Rewriting branches, updating commits and clearing history</h4>
+            <li>git rebase [branch]: apply any commits of current branch ahead of specified one</li>
+            <li>git reset --hard [commit]: clear staging area, rewrite working tree from specified commit</li>
+            <h3>TEMPORARY COMMITS</h3>
+            <h4>Temporarily store modified, tracked files in order to change branches</h4>
+            <li>git stash: Save modified and staged changes</li>
+            <li>git stash list: list stack-order of stashed file changes</li>
+            <li>git stash pop: write working from top of stash stack</li>
+            <li>git stash drop: discard the changes from top of stash stack</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+     <ul>
+       <li>Enter your JavaScript notes here</li>
+     </ul>
+      </section>
     </main>
 
     <footer>
