--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/seahawk.jpg" alt="Seattle Seahawks Logo." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
       <section class="card" id="html-section">
@@ -128,5 +129,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
